2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (print_table_section): Removed (now part of 
	WebHACC::Language::DOM).

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Information sections are now handled by WebHACC::Input
	module.  Input objects for subdocuments now owns their
	own subclass.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Errors and results are now handled by WebHACC::Result.
	Decode |uri| parameter as UTF-8.  HTTP header dump and
	input error are now handled by WebHACC::Input.

2008-07-20  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Modularized.

	* WebHACC/: New directory.

2008-07-18  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (print_structure_dump_webidl_section): Use ->idl_text
	for dummping (Data::Dumper::Dumper no longer used).

2008-05-18  Wakaba  <wakaba@suika.fam.cx>

	* LICENSE: Note on icons/*.png are added.

	* icons/: New directory.

	* cc-style.css: Rules for background images on error category
	are added.

2008-05-18  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (print_source_string_section): Use new Message::Charset::Info
	interface to decode source code, otherwise the Perl native Encode
	module might decode the source code into different character
	string with the Info's.

2008-05-10  Wakaba  <wakaba@suika.fam.cx>

	* standards.en.html (requirements): Remove a requirement
	for an HTML element's allowed context (it is covered by HTML5
	spec since r1583).

2008-05-06  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Use table object returned by the checker; don't
	form a table by itself.

	* table-script.js: Use different coloring for empty data cells.

	* cc.cgi, table.cgi: Remove table reference for JSON convertion.

2008-05-06  Wakaba  <wakaba@suika.fam.cx>

	* table-script.js: Support for header cell highlighting.

	* table.cgi: Set |id| to cells; it enables the cell highlighting
	feature.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* table-script.js: Table header/footer fill started at a
	wrong point.
